src/test/ui/issues/issue-61882.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-61882.rs:4:22
   |
LL |     const B: A<u8> = Self(0);
   |                      ^^^^^-^
   |                           |
   |                           expected `bool`, found `{integer}`
   |
note: tuple struct defined here
  --> $DIR/issue-61882.rs:1:1
   |
LL | struct A<T>(T);
   | ^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |     const B: A<u8> = struct A<T>(T);({bool});
   |                      ^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-61882.rs:4:22
   |
LL |     const B: A<u8> = Self(0);
   |                      ^^^^^^^ expected `u8`, found `bool`
   |
   = note: expected struct `A<u8>`
              found struct `A<bool>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
